<resources>
    <string name="app_name">Avengers</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>
