<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
<ImageView
    android:id="@+id/imgLogo"
    android:layout_width="240dp"
    android:layout_height="100dp"
    android:src="@drawable/avengers_logo"
    android:layout_marginTop="30dp"
    android:layout_centerHorizontal="true"
    ></ImageView>
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogo"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp"
        android:hint="@string/enter_mobile_number"
        ></EditText>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etMobileNumber"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:padding="6dp"
        android:hint="@string/enter_password"
        ></EditText>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/etPassword"
        android:text="@string/login"
        android:textSize="18sp"
        android:background="@color/skyblue"
        android:padding="6dp"
        android:textStyle="bold"></Button>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_below="@id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:padding="6dp"></TextView>
    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_yourself"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        android:padding="6dp"
        ></TextView>



</RelativeLayout>